# CppAIService-main-20260304

./: .gitignore  CMakeLists.txt  TURNON.txt  cpp-httpserver.service  fetch_result.txt  interview_guide.md  interview_question.md  load_test.js  result.txt  result_2026-03-06-09-40-57.txt  result_2026-03-06T09-42-24-436Z.txt  result_2026-03-06T09-45-26-197Z.txt  resume.md  sandbox-agent.service  smoke.js  start_all.sh  test.txt  tutor-agent.service
AIApps/ChatServer/include/: ChatServer.h
AIApps/ChatServer/include/AIUtil/: AIConfig.h  AIStrategy.h  MQManager.h
AIApps/ChatServer/include/handlers/: LeetcodeHandler.h
AIApps/ChatServer/include/models/: LeetcodeRecord.h
AIApps/ChatServer/resource/: AI.html  NotFound.html  config.json  entry.html  init_leetcode.sql  leetcode_app.html  menu.html
AIApps/ChatServer/src/: ChatServer.cpp  main.cpp
AIApps/ChatServer/src/AIUtil/: AIConfig.cpp  AIHelper.cpp  AIStrategy.cpp  MQManager.cpp
AIApps/ChatServer/src/handlers/: ChatLoginHandler.cpp  LeetcodeHandler.cpp
Agent/: interface.md
Agent/SandBoxAgent/: executor.py  mock_sandbox_cpp_test.py  mock_sandbox_test.py  models.py  prompts.py  sandbox_agent.py  sandbox_api.py  secruty_check.py
Agent/TurorAgent/: .env.example  =3.9.0  agent_skills.py  agent_tools.py  main.py  mock_test.py  models.py  prompts.py  requirements.txt  tutor_agent.py  walkthrough.md
Agent/tutor2/: .env.example  README.md  __init__.py  config.py  graph.py  requirements.txt  service.py  state.py
Agent/tutor2/agents/: complexity_agent.py  runtime_agent.py  syntax_rag_agent.py  testcase_agent.py
Agent/tutor2/data/: test_cases_cache.csv
HttpServer/include/http/: HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/src/http/: HttpServer.cpp
HttpServer/src/session/: SessionManager.cpp
HttpServer/src/utils/db/: DbConnectionPool.cpp
